--- a/css/link.html
+++ b/css/link.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <meta property="og:type" content="article">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="'css/css.css'">
+  <link rel="stylesheet" type="text/css" href="'css.css'">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="css/app.css">
-	<link rel="stylesheet" type="text/css" href="css/template.css">
-	<link rel="stylesheet" href="css/dash.css">
+	<link rel="stylesheet" type="text/css" href="app.css">
+	<link rel="stylesheet" type="text/css" href="template.css">
+	<link rel="stylesheet" href="dash.css">
 	<style type="text/css">
 		.rows{
 			margin-top: -15px;
@@ -107,7 +107,7 @@
 
 <div></div>
 <div></div>
-<script src="js/myScript.js"></script>
+<script src="myScript.js"></script>
 </body>
 
 </html>
